New post: 베트남 다낭

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ layout: compress
 <body class="body">
 <div class="container">
     <header class="header">
-        <h1>박성빈의 비망록<span>[비:망녹] 잊지 않으려고 중요한 골자를 적어 둔 것. 또는 그런 책자.<br>여행, 영화, 책</span></h1>
+        <h1>박성빈의 비망록<span>[비:망녹] 잊지 않으려고 중요한 골자를 적어 둔 것. 또는 그런 책자.<br>여행, 영화, 책<br>SNS는 하지 않습니다.</span></h1>
         <nav class="links">
             <a href="#"><i class="fa fa-twitter-square fa-3x"></i></a>
             <a href="#"><i class="fa fa-instagram fa-3x"></i></a>
